--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <inceptionYear>2009</inceptionYear>
 
     <properties>
-        <scala.version>2.10.2</scala.version>
+        <scala.version>2.11.2</scala.version>
     </properties>
 
     <repositories>
@@ -49,9 +49,14 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>org.scala-lang</groupId>
-                <artifactId>scala-swing</artifactId>
-                <version>${scala.version}</version>
+              <groupId>org.scala-lang.modules</groupId>
+              <artifactId>scala-swing_2.11</artifactId>
+              <version>1.0.1</version>
+            </dependency>
+            <dependency>
+              <groupId>org.scala-lang.modules</groupId>
+              <artifactId>scala-xml_2.11</artifactId>
+              <version>1.0.2</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
