--- a/quiz/pom.xml
+++ b/quiz/pom.xml
@@ -14,9 +14,13 @@
 
   <dependencies>
   	<dependency>
-	  <groupId>org.scala-lang</groupId>
-	  <artifactId>scala-swing</artifactId>
-	</dependency>
+      <groupId>org.scala-lang.modules</groupId>
+      <artifactId>scala-swing_2.11</artifactId>
+  	</dependency>
+    <dependency>
+      <groupId>org.scala-lang.modules</groupId>
+      <artifactId>scala-xml_2.11</artifactId>
+    </dependency>
   </dependencies>
   
    <build>
